minor changes to improve readability